--- a/emcgrab.yml
+++ b/emcgrab.yml
@@ -8,4 +8,4 @@
     args:
       chdir: /etc/
     register: outputfiles
-  - debug: var=outputfiles.stdout
+  - debug: var=outputfiles.stdout_lines
